--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,13 @@ dql/results/
 test_*.py
 
 
+# agent_config
+.claude/
+.opencode/
+.serena/
+.vscode/
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
